compiler/e2e/test/snapshot/ir/expression/cast/invalid_type_cast/main.pnx
pub struct Adt:
    pass


pub def main():
    let a = 2
    let b = a as Adt
    
    let c = Adt{}
    let d = c as int32